--- a/UpGun_Mod_Loader.Autres.Notifs.resx
+++ b/UpGun_Mod_Loader.Autres.Notifs.resx
@@ -996,4 +996,10 @@ v0EIAAAAAElFTkSuQmCCCw==</value>
   <data name="logo 30" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>logo 30.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="logo93" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>logo93.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="DiscordLogo" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>DiscordLogo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
